# CrossPlatformCPlusPlusProject

./: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
doc/: Makefile.am  README.md  changelog
examples/: Makefile.am  sample.data
man/: Makefile.am  helloWorld.1
scripts/: Makefile.am  helloWorldScript2.sh
src/: Makefile.am  helloWorld.cpp  helloWorld.h  main.cpp
